--- a/site/index.html
+++ b/site/index.html
@@ -761,7 +761,7 @@
 <p><strong>September 2021</strong> Invited Reviewer for NeurIPS Workshop: I (Still) Can't Believe It's Not Better</p>
 </li>
 <li>
-<p><strong>August 2021</strong> Research Mentor | Association for Computational Linguistics</p>
+<p><strong>August 2021</strong> Research Mentorship | Association for Computational Linguistics</p>
 </li>
 <li>
 <p><strong>November 2018</strong> Area Chair - AutoML | NeurIPS 2018</p>
